styled search, lost content, got it back, computer went black, broke the code, fixed the code..maybe. this commit message is too long

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,3 +11,16 @@ body {
   bottom: 0;
   left: 0;
 }
+
+#searchtext {
+  height:95%;
+  width:95%;
+  resize: none;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  padding: 30px;
+  font-family: Helvetica;
+  font-size: 100px;
+
+}
